--- a/home.css
+++ b/home.css
@@ -15,14 +15,19 @@ body {
 
 .nav {
     background-color: #2b303a;
-    border-bottom: 2px solid #005377;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.35);
+    border-bottom: 0.13vw solid #005377;
+    box-shadow: 0 0.13vw 0.65vw rgba(0, 0, 0, 0.35);
     overflow: hidden;
-    padding: 40px 24px;
+    padding: 1.75vw 2.25vw;
+}
+
+.nav img {
+    width: 16vw;
 }
 
 .nav .links {
     float: right;
+    margin-top: 1.5vw;
 }
 
 .nav a {
@@ -30,9 +35,11 @@ body {
     display: block;
     float: left;
     font-family: 'geometosregular', Arial, sans-serif;
-    font-size: 28px;
-    margin-right: 12px;
-    padding: 4px 16px;
+    font-size: 1.85vw;
+    line-height: auto;
+    margin-left: 1vw;
+    margin-right: 2vw;
+    padding: 0.35vw 1.15vw;
     text-align: center;
     text-decoration: none;
 }
@@ -41,15 +48,3 @@ body {
     background-color: #005377;
     color: #ffffff;
 }
-
-/*@media screen and (max-width: 950px) {
-    .nav a {
-        font-size: 14px;
-        margin-right: 6px;
-        padding: 4px 8px;
-        text-align: center;
-        text-decoration: none;
-    }
-}
-
-/*  END ALL-PAGE CSS  */
