--- a/home.css
+++ b/home.css
@@ -20,6 +20,8 @@ body {
     height: 5.3vw;
     overflow: hidden;
     padding: 1.5vw 1.75vw;
+    position: relative;
+    z-index: 2;
 }
 
 .nav img {
@@ -56,6 +58,8 @@ body {
     height: 2.6vw;
     overflow: hidden;
     padding: 0.5vw 1.75vw;
+    position: relative;
+    z-index: 1;
 }*/
 
 .navtab {
@@ -65,6 +69,8 @@ body {
     height: 2.6vw;
     overflow: hidden;
     padding: 0.5vw 1.75vw;
+    position: relative;
+    z-index: 1;
 }
 
 .navtab span {
@@ -73,7 +79,7 @@ body {
     float: left;
     font-family: 'geometosregular', Arial, sans-serif;
     font-size: 6vw;
-    margin: -2.1vw 0 0 -0.3vw;
+    margin: -2vw 0 0 -0.3vw;
     text-decoration: none;
     user-select: none;
 }
