--- a/home.css
+++ b/home.css
@@ -49,6 +49,7 @@ body {
 
 .nav a:hover {
     background-color: #005377;
+    border-radius: 0.6vw;
 }
 
 /*.subnav {
@@ -104,6 +105,7 @@ body {
 
 .subnav a:hover {
     background-color: #ffffff50;
+    border-radius: 0.6vw;
 }
 
 /* END ALL-PAGE CSS */
