--- a/home.css
+++ b/home.css
@@ -52,17 +52,6 @@ body {
     border-radius: 0.6vw;
 }
 
-/*.subnav {
-    background-color: #06a77d;
-    box-shadow: 0 0.13vw 0.65vw rgba(0, 0, 0, 0.35);
-    display: none;
-    height: 2.6vw;
-    overflow: hidden;
-    padding: 0.5vw 1.75vw;
-    position: relative;
-    z-index: 1;
-}*/
-
 .navtab {
     background-color: #06a77d;
     box-shadow: 0 0.13vw 0.65vw rgba(0, 0, 0, 0.35);
@@ -106,6 +95,56 @@ body {
 .subnav a:hover {
     background-color: #ffffff50;
     border-radius: 0.6vw;
+}
+
+@media only screen and (min-width: 1024px) {
+    .nav {
+        border-bottom: 1.33px solid #005377;
+        box-shadow: 0 1.33px 6.66px rgba(0, 0, 0, 0.35);
+        height: 54.27px;
+        padding: 15.36px 17.92px;
+    }
+    
+    .nav img {
+        width: 153.6px;
+    }
+    
+    .links {
+        margin-top: 8.7px;
+    }
+    
+    .nav a {
+        font-size: 20.48px;
+        margin-left: 6.14px;
+        margin-right: 12.29px;
+        padding: 7.17px 10.24px;
+    }
+    
+    .nav a:hover {
+        border-radius: 6.14px;
+    }
+    
+    .navtab {
+        box-shadow: 0 1.33px 6.66px rgba(0, 0, 0, 0.35);
+        height: 25.6px;
+        padding: 4.1px 17.92px;
+    }
+    
+    .navtab span {
+        font-size: 61.44px;
+        margin: -19.97px 0 0 -3.07px;
+    }
+    
+    .sublinks a {
+        font-size: 17.41px;
+        margin-left: 6.14px;
+        margin-right: 14.34px;
+        padding: 3.07px 10.24px;
+    }
+    
+    .subnav a:hover {
+        border-radius: 6.14px;
+    }
 }
 
 /* END ALL-PAGE CSS */
