--- a/home.css
+++ b/home.css
@@ -13,10 +13,18 @@ body {
          url('fonts/geometos/geometos.woff') format('woff');
 }
 
+@font-face {
+    font-family: 'nexalight';
+    src: url('fonts/nexa/nexa_light.eot');
+    src: url('fonts/nexa/nexa_light.svg#nexalight') format('svg'),
+        url('fonts/nexa/nexa_light.ttf') format('ttf'),
+        url('fonts/nexa/nexa_light.woff') format('woff');
+}
+
 .nav {
     background-color: #2b303a;
     border-bottom: 0.13vw solid #005377;
-    box-shadow: 0 0.13vw 0.65vw rgba(0, 0, 0, 0.35);
+    box-shadow: 0 0.13vw 0.65vw #00000055;
     height: 5.3vw;
     overflow: hidden;
     padding: 1.5vw 1.75vw;
@@ -34,6 +42,7 @@ body {
 }
 
 .nav a {
+    border-radius: 0.6vw;
     color: #ffffff;
     display: block;
     float: left;
@@ -45,16 +54,18 @@ body {
     padding: 0.7vw 1vw;
     text-align: center;
     text-decoration: none;
+    transition: background-color 0.5s ease;
 }
 
 .nav a:hover {
     background-color: #005377;
     border-radius: 0.6vw;
+    transition: background-color 0.5s ease;
 }
 
 .navtab {
     background-color: #06a77d;
-    box-shadow: 0 0.13vw 0.65vw rgba(0, 0, 0, 0.35);
+    box-shadow: 0 0.13vw 0.65vw #00000055;
     display: none;
     height: 2.5vw;
     overflow: hidden;
@@ -80,6 +91,7 @@ body {
 
 .sublinks a {
     color: #ffffff;
+    border-radius: 0.6vw;
     display: block;
     float: left;
     font-family: 'geometosregular', Arial, sans-serif;
@@ -90,17 +102,63 @@ body {
     padding: 0.3vw 1vw;
     text-align: center;
     text-decoration: none;
+    transition: background-color 0.5s ease;
 }
 
 .subnav a:hover {
     background-color: #ffffff50;
     border-radius: 0.6vw;
+    transition: background-color 0.5s ease;
 }
+
+.footer {
+    background-color: #2b303a;
+    border-top: 0.13vw solid #005377;
+    bottom: 0;
+    box-shadow: 0 -0.13vw 0.65vw #00000055;
+    color: #ffffff75;
+    font-family: 'nexalight', Arial, sans-serif;
+    font-size: 1vw;
+    font-variant: small-caps;
+    height: 2.6vw;
+    left: 0;
+    letter-spacing: 0.03vw;
+    padding: 1.7vw 2vw;
+    position: absolute;
+    right: 0;
+    text-align: center;
+}
+
+#f_left {
+    float: left;
+    margin-top: -0.8vw;
+}
+
+#f_left img {
+    opacity: 0.46;
+    width: 4vw;
+}
+
+#f_center {
+    margin-left: 5vw;
+    display: inline-block;
+    margin-top: 0.6vw;
+}
+
+#f_right {
+    font-size: 1.8vw;
+    float: right;
+    margin-top: 0.3vw;
+}
+
+#f_right i {
+    margin-left: 1.2vw;
+};
 
 @media only screen and (min-width: 1024px) {
     .nav {
         border-bottom: 1.33px solid #005377;
-        box-shadow: 0 1.33px 6.66px rgba(0, 0, 0, 0.35);
+        box-shadow: 0 1.33px 6.66px #00000055;
         height: 54.27px;
         padding: 15.36px 17.92px;
     }
@@ -114,6 +172,7 @@ body {
     }
     
     .nav a {
+        border-radius: 6.14px;
         font-size: 20.48px;
         margin-left: 6.14px;
         margin-right: 12.29px;
@@ -125,7 +184,7 @@ body {
     }
     
     .navtab {
-        box-shadow: 0 1.33px 6.66px rgba(0, 0, 0, 0.35);
+        box-shadow: 0 1.33px 6.66px #00000055;
         height: 25.6px;
         padding: 4.1px 17.92px;
     }
@@ -136,6 +195,7 @@ body {
     }
     
     .sublinks a {
+        border-radius: 6.14px;
         font-size: 17.41px;
         margin-left: 6.14px;
         margin-right: 14.34px;
