--- a/home.css
+++ b/home.css
@@ -153,7 +153,7 @@ body {
 
 #f_right i {
     margin-left: 1.2vw;
-};
+}
 
 @media only screen and (min-width: 1024px) {
     .nav {
@@ -204,6 +204,37 @@ body {
     
     .subnav a:hover {
         border-radius: 6.14px;
+    }
+
+    .footer {
+        border-top: 1.33px solid #005377;
+        box-shadow: 0 -1.33px 6.66px #00000055;
+        font-size: 10.24px;
+        height: 26.62px;
+        letter-spacing: 0.31px;
+        padding: 17.41px 20.48px;
+    }
+    
+    #f_left {
+        margin-top: -8.19px;
+    }
+    
+    #f_left img {
+        width: 40.96px;
+    }
+    
+    #f_center {
+        margin-left: 51.2px;
+        margin-top: 6.14px;
+    }
+    
+    #f_right {
+        font-size: 18.43px;
+        margin-top: 3.07px;
+    }
+    
+    #f_right i {
+        margin-left: 12.29px;
     }
 }
 
