--- a/home.css
+++ b/home.css
@@ -22,60 +22,53 @@ body {
 }
 
 .nav {
-    background-color: #2b303a;
-    border-bottom: 0.13vw solid #005377;
-    box-shadow: 0 0.13vw 0.65vw #00000055;
+    background-color: rgba(43, 48, 58, 1);
+    border-bottom: 0.13vw solid rgba(0, 83, 119, 1);
+    box-shadow: 0 0.13vw 0.65vw rgba(0, 0, 0, 0.35);
     height: 5.3vw;
-    overflow: hidden;
     padding: 1.5vw 1.75vw;
-    position: relative;
     z-index: 2;
 }
 
 .nav img {
+    float: left;
     width: 15vw;
 }
 
 .links {
     float: right;
-    margin-top: 0.85vw;
+    margin: 0.85vw 0 0 0;
 }
 
 .links a {
     border-radius: 0.6vw;
-    color: #ffffff;
-    display: block;
+    color: rgba(255, 255, 255, 1);
     float: left;
     font-family: 'geometosregular', Arial, sans-serif;
     font-size: 2vw;
-    line-height: auto;
-    margin-left: 0.6vw;
-    margin-right: 1.2vw;
+    margin: 0 1.2vw 0 0.6vw;
     padding: 0.7vw 1vw;
-    text-align: center;
     text-decoration: none;
     transition: background-color 0.3s ease;
 }
 
 .links a:hover {
-    background-color: #005377;
+    background-color: rgba(0, 83, 119, 1);
     border-radius: 0.6vw;
 }
 
 .navtab {
-    background-color: #06a77d;
-    box-shadow: 0 0.13vw 0.65vw #00000055;
+    background-color: rgba(6, 167, 125, 1);
+    box-shadow: 0 0.13vw 0.65vw rgba(0, 0, 0, 0.35);
     display: none;
     height: 2.5vw;
     overflow: hidden;
     padding: 0.4vw 1.75vw;
-    position: relative;
     z-index: 1;
 }
 
 .navtab span {
-    color: #ffffff25;
-    display: block;
+    color: rgba(255, 255, 255, 0.15);
     float: left;
     font-family: 'geometosregular', Arial, sans-serif;
     font-size: 6vw;
@@ -89,32 +82,28 @@ body {
 }
 
 .sublinks a {
-    color: #ffffff;
+    color: rgba(255, 255, 255, 1);
     border-radius: 0.6vw;
-    display: block;
     float: left;
     font-family: 'geometosregular', Arial, sans-serif;
     font-size: 1.7vw;
-    line-height: auto;
-    margin-left: 0.6vw;
-    margin-right: 1.4vw;
+    margin: 0 1.4vw 0 0.6vw;
     padding: 0.3vw 1vw;
-    text-align: center;
     text-decoration: none;
     transition: background-color 0.3s ease;
 }
 
 .sublinks a:hover {
-    background-color: #ffffff50;
+    background-color: rgba(255, 255, 255, 0.25);
     border-radius: 0.6vw;
 }
 
 .footer {
-    background-color: #2b303a;
-    border-top: 0.13vw solid #005377;
+    background-color: rgba(43, 48, 58, 1);
+    border-top: 0.13vw solid rgba(0, 83, 119, 1);
     bottom: 0;
-    box-shadow: 0 -0.13vw 0.65vw #00000055;
-    color: #ffffff75;
+    box-shadow: 0 -0.13vw 0.65vw rgba(0, 0, 0, 0.35);
+    color: rgba(255, 255, 255, 0.5);
     font-family: 'nexalight', Arial, sans-serif;
     font-size: 1vw;
     font-variant: small-caps;
@@ -129,50 +118,51 @@ body {
 
 #f_left {
     float: left;
-    margin: -1.4vw -0.6vw 0;
+    margin: -1.4vw -0.6vw 0 -0.6vw;
     padding: 0.6vw 0.6vw;
 }
 
 #f_left img {
     filter: grayscale(100%);
-    opacity: 0.46;
+    opacity: 0.5;
     transition: all 0.3s ease, width 1ms;
+    -webkit-filter: grayscale(100%);
     width: 4vw;
 }
 
 #f_left img:hover {
     filter: grayscale(0%);
     opacity: 0.8;
+    -webkit-filter: grayscale(0%);
 }
 
 #f_center {
-    margin-left: 5.3vw;
     display: inline-block;
-    margin-top: 0.7vw;
+    margin: 0.7vw 0 0 5.3vw;
 }
 
 #f_right {
+    margin: -0.1vw 0 0 0;
     font-size: 1.8vw;
     float: right;
-    margin-top: -0.1vw;
 }
 
 #f_right a {
-    color: #ffffff75;
+    color: rgba(255, 255, 255, 0.5);
     padding: 0.6vw 0.6vw;
     text-decoration: none;
     transition: color 0.3s ease, text-shadow 0.3s ease;
 }
 
 #f_right a:hover {
-    color: #06a77d;
-    text-shadow: 0 0 1vw #ffffff40;
+    color: rgba(6, 167, 125, 1);
+    text-shadow: 0 0 1vw rgba(255, 255, 255, 0.25);
 }
 
 @media only screen and (min-width: 1024px) {
     .nav {
-        border-bottom: 1.33px solid #005377;
-        box-shadow: 0 1.33px 6.66px #00000055;
+        border-bottom: 1.33px solid rgba(0, 83, 119, 1);
+        box-shadow: 0 1.33px 6.66px rgba(0, 0, 0, 0.35);
         height: 54.27px;
         padding: 15.36px 17.92px;
     }
@@ -188,8 +178,7 @@ body {
     .links a {
         border-radius: 6.14px;
         font-size: 20.48px;
-        margin-left: 6.14px;
-        margin-right: 12.29px;
+        margin: 0 12.29px 0 6.14px;
         padding: 7.17px 10.24px;
     }
     
@@ -198,7 +187,7 @@ body {
     }
     
     .navtab {
-        box-shadow: 0 1.33px 6.66px #00000055;
+        box-shadow: 0 1.33px 6.66px rgba(0, 0, 0, 0.35);
         height: 25.6px;
         padding: 4.1px 17.92px;
     }
@@ -211,8 +200,7 @@ body {
     .sublinks a {
         border-radius: 6.14px;
         font-size: 17.41px;
-        margin-left: 6.14px;
-        margin-right: 14.34px;
+        margin: 0 14.34px 0 6.14px;
         padding: 3.07px 10.24px;
     }
     
@@ -221,8 +209,8 @@ body {
     }
 
     .footer {
-        border-top: 1.33px solid #005377;
-        box-shadow: 0 -1.33px 6.66px #00000055;
+        border-top: 1.33px solid rgba(0, 83, 119, 1);
+        box-shadow: 0 -1.33px 6.66px rgba(0, 0, 0, 0.35);
         font-size: 10.24px;
         height: 26.62px;
         letter-spacing: 0.31px;
@@ -230,7 +218,7 @@ body {
     }
     
     #f_left {
-        margin: -14.34px -6.14px 0;
+        margin: -14.34px -6.14px 0 -6.14px;
         padding: 6.14px 6.14px;
     }
     
@@ -239,13 +227,12 @@ body {
     }
     
     #f_center {
-        margin-left: 54.27px;
-        margin-top: 7.17px;
+        margin: 7.17px 0 0 54.27px;
     }
     
     #f_right {
+        margin: -1.02px 0 0 0;
         font-size: 18.43px;
-        margin-top: -1.02px;
     }
     
     #f_right a {
@@ -253,7 +240,7 @@ body {
     }
 
     #f_right a:hover {
-        text-shadow: 0 0 10.24px #ffffff40;
+        text-shadow: 0 0 10.24px rgba(255, 255, 255, 0.25);
     }
 }
 
