--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ html {
 
 body {
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
     height: 100%;
     margin: 0;
@@ -17,6 +18,14 @@ body {
     src: url('../fonts/geometos/geometos.svg#geometosregular') format('svg'),
          url('../fonts/geometos/geometos.ttf') format('ttf'),
          url('../fonts/geometos/geometos.woff') format('woff');
+}
+
+@font-face {
+    font-family: 'nexabold';
+    src: url('../fonts/nexa/nexa_bold.eot');
+    src: url('../fonts/nexa/nexa_bold.svg#nexabold') format('svg'),
+        url('../fonts/nexa/nexa_bold.ttf') format('ttf'),
+        url('../fonts/nexa/nexa_bold.woff') format('woff');
 }
 
 @font-face {
@@ -113,16 +122,14 @@ body {
 }
 
 .content {
-    flex: 1 0 auto;
-    margin: 4vw 5vw -2.6vw 5vw;
-    -webkit-flex: 1 0 auto;
-    z-index: 0;
+    flex: 1;
+    margin: 6vw 10vw 6vw 10vw;
+    -webkit-flex: 1;
 }
 
 .footer {
     background-color: rgba(43, 48, 58, 1);
     border-top: 0.13vw solid rgba(0, 83, 119, 1);
-    /*bottom: 0;*/
     box-shadow: 0 -0.13vw 0.65vw rgba(0, 0, 0, 0.35);
     color: rgba(255, 255, 255, 0.5);
     font-family: 'nexalight', Arial, sans-serif;
@@ -132,7 +139,6 @@ body {
     left: 0;
     letter-spacing: 0.03vw;
     padding: 1.7vw 2vw;
-    /*position: relative;*/
     right: 0;
     text-align: center;
     z-index: 1;
@@ -231,7 +237,7 @@ body {
     }
 
     .content {
-        margin: 40.96px 51.2px 40.96px 51.2px;
+        margin: 61.44px 102.4px 61.44px 102.4px;
     }
 
     .footer {
@@ -269,3 +275,42 @@ body {
         text-shadow: 0 0 10.24px rgba(255, 255, 255, 0.25);
     }
 }
+
+/* BEGIN TEMPORARY CSS */
+
+.tmp {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.alert {
+    border: 1px solid transparent;
+    border-radius: 4px;
+    font-family: Helvetica, Arial, sans-serif;
+    padding: 15px;
+    margin-bottom: 20px;
+}
+
+.alert_h {
+    font-family: 'geometosregular', Arial, sans-serif;
+    font-size: 3vw;
+    margin: 0.5vw 0 0.5vw 0;
+    text-shadow: unset;
+}
+
+.alert_danger, .alert_danger a {
+    background-color: #f2dede;
+    border-color: #eed3d7;
+    color: #b94a48;
+    font-family: 'nexalight', Arial, sans-serif;
+    font-size: 1vw;
+    text-decoration: none;
+}
+
+b {
+    font-family: 'nexabold', Arial, sans-serif;
+    font-weight: normal;
+}
+
+/*  END TEMPORARY CSS  */
