--- a/css/main.css
+++ b/css/main.css
@@ -287,7 +287,6 @@ body {
 .alert {
     border: 1px solid transparent;
     border-radius: 4px;
-    font-family: Helvetica, Arial, sans-serif;
     padding: 15px;
     margin-bottom: 20px;
 }
@@ -295,6 +294,7 @@ body {
 .alert_h, .h1_alt {
     font-family: 'geometosregular', Arial, sans-serif;
     font-size: 3vw;
+    font-variant: small-caps;
     margin: 0.5vw 0 0.5vw 0;
 }
 
@@ -304,7 +304,6 @@ body {
     color: #b94a48;
     font-family: 'nexalight', Arial, sans-serif;
     font-size: 1vw;
-    text-decoration: none;
 }
 
 b {
@@ -328,6 +327,31 @@ audio {
     margin-left: -25%;
     text-align: left;
     width: 150%;
+}
+
+p {
+    font-family: 'nexalight', Arial, sans-serif;
+    font-size: 1vw;
+}
+
+.subtext {
+    color: rgba(0, 0, 0, 0.50);
+    font-style: italic;
+    margin: -0.5vw 0 1vw 0;
+}
+
+.h2_alt {
+    color: rgba(0, 0, 0, 0.70);
+    font-family: 'geometosregular', Arial, sans-serif;
+    font-size: 2.2vw;
+    font-variant: small-caps;
+    font-weight: 0;
+    letter-spacing: 0.05vw;
+    margin: 1vw 0 0.5vw 0;
+}
+
+.black {
+    color: rgba(0, 0, 0, 1);
 }
 
 /*  END TEMPORARY CSS  */
