--- a/css/main.css
+++ b/css/main.css
@@ -370,4 +370,15 @@ hr {
     margin: 0.4vw 0 0.5vw 0;    
 }
 
+.poster {
+    display: inline-block;
+    margin-right: 2vw;
+}
+
+.poster img {
+    display: block;
+    margin: auto;
+    width: 8vw;
+}
+
 /*  END TEMPORARY CSS  */
