--- a/css/main.css
+++ b/css/main.css
@@ -372,7 +372,7 @@ hr {
 
 .poster {
     display: inline-block;
-    margin-right: 2vw;
+    margin-right: 4vw;
 }
 
 .poster img {
@@ -384,6 +384,15 @@ hr {
 .poster p {
     margin: auto;
     text-align: center;
+}
+
+.logo {
+    display: block;
+    filter: invert(100%);
+    margin-bottom: 3vw;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20vw;
 }
 
 /*  END TEMPORARY CSS  */
